modificacion de navegación de menu

--- a/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
@@ -7,8 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Portal de Noticias" url="#"/>
-            <p:menuitem value="Gestión de Noticias" url="#{siteUrls.gestionNoticia}"/>
+            <p:menuitem value="Portal de Noticias" url="#{siteUrls.gestionNoticia}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
