--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -7,8 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Docentes" url="#"/>
-            <p:menuitem value="Mantenimiento de Docentes" url="#{siteUrls.gestionDocentes}"/>
+            <p:menuitem value="Gestionar Docentes" url="#{siteUrls.gestionDocentes}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
