--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/index.xhtml
@@ -7,8 +7,7 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Portal de Consultas" url="#"/>
-            <p:menuitem value="Gestión de Consultas" url="#{siteUrls.gestionConsulta}"/>
+            <p:menuitem value="Portal de Consultas" url="#{siteUrls.gestionConsulta}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
